MOBACCTMGT-1043 resolved action button alignment on iOS

--- a/scss/includes/_ui-management.scss
+++ b/scss/includes/_ui-management.scss
@@ -157,10 +157,11 @@
     .content-controls {
       position: absolute;
       bottom: -($button-height / 2);
+      width: 100%;
+      text-align: center;
 
       .button-control {
         @extend .button;
-        @extend .button-block;
 
         margin: 0;
         height:        $button-height;
